--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,4 @@
  lib_deps =
    mobizt/Firebase Arduino Client Library for ESP8266 and ESP32 @ ^4.4.17
    madhephaestus/ESP32Servo@^3.0.6
+     arduino-libraries/NTPClient @ ^3.2.1
